--- a/chemical.html
+++ b/chemical.html
@@ -35,7 +35,7 @@
 
         <div id="toplog">
 
-            <a href="index.htm" title="山东飞肯新材料科技有限公司"><img src="./image/logo.jpg"  height="70" style="margin: 5px;" alt="温州斐瑞德贸易有限公司" /></a>
+            <a href="index.html" title="山东飞肯新材料科技有限公司"><img src="./image/logo.jpg"  height="70" style="margin: 5px;" alt="温州斐瑞德贸易有限公司" /></a>
 
         </div>
 
@@ -47,7 +47,7 @@
   <div class="wdiv"> 
     <ul id="main-menu" class="nav navbar-nav">
       <li>
-        <a href="./index.htm" >首页</a>                              		
+        <a href="./index.html" >首页</a>                              		
       </li>
       <li>
         <a href="./aboutus.html">公司简介</a>                             		
@@ -190,7 +190,7 @@
       <div class="wdiv footercls" style="  text-align:center;overflow:hidden; padding-top:20px;">
       <ul>
         <li>              
-          <a href="./index.htm">
+          <a href="./index.html">
                 首页                    </a>&nbsp;|&nbsp;
           <a href="./aboutus.html">
                   公司简介                    </a>&nbsp;|&nbsp;
