--- a/chemical.html
+++ b/chemical.html
@@ -6,9 +6,9 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<title>山东飞肯新材料科技有限公司</title>
-<meta name="keywords" content=""/>
-<meta name="description" content="山东飞肯新材料科技有限公司">
+<title>山东飞肯新材料科技有限公司-定制活性炭-Norit活性炭-法国CECA活性炭- Calgon活性炭-白鹭活性炭-Jacoby活性炭</title>
+<meta name="keywords" content="Norit活性炭,法国CECA活性炭,Calgon活性炭,白鹭活性炭,Jacoby活性炭,VOC尾气吸附,油气回收,溶剂回收,铜箔电解净化,冷凝水净化,山东飞肯新材料"/>
+<meta name="description" content="山东飞肯新材料-定制活性炭-Norit活性炭-法国CECA活性炭- Calgon活性炭-白鹭活性炭-Jacoby活性炭">
     
 <link rel="stylesheet" type="text/css" href="./css/index.css">
 <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -31,7 +31,7 @@
 
         <div id="toplog">
 
-            <a href="index.html" title="山东飞肯新材料科技有限公司"><img src="./image/logo.jpg"  height="70" style="margin: 5px;" alt="温州斐瑞德贸易有限公司" /></a>
+            <a href="./index.html" title="山东飞肯新材料科技有限公司"><img src="./image/logo.jpg"  height="70" style="margin: 5px;" alt="温州斐瑞德贸易有限公司" /></a>
 
         </div>
 
@@ -49,10 +49,10 @@
         <a href="./aboutus.html">公司简介</a>                             		
       </li>
       <li>
-        <a href="./carbon.html">产品导航</a>                          		
+        <a href="./application.html">应用导航</a>                          		
       </li>
       <li>
-        <a href="./industry.html">应用知识</a>                               		
+        <a href="./knowledge.html">实用知识</a>                               		
       </li>
       <li>
         <a href="./jobs.html">招才纳贤</a>                              		
@@ -82,7 +82,7 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./carbon.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">活性炭在化工行业的应用</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
         </li> 
         <li>
             <a href="./chemical1.html">润滑油脱色</a>
@@ -111,7 +111,7 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 产品导航 >> 活性炭在化工行业的应用
+            当前位置:首页 >> 产品导航 >> 化工行业
           </div>
 
           <div class="conNeiText">  
@@ -182,24 +182,17 @@
 
 <div class="clear"></div>
   <!-- Footer ================================================== -->
-  <div  style=" background-color:#093075; width:100%; color:#fff; height:110px; margin-top:10px;"> 
+  <div  style=" background-color:#065eb1; width:100%; color:#fff; height:110px; margin-top:10px;"> 
       <div class="wdiv footercls" style="  text-align:center;overflow:hidden; padding-top:20px;">
       <ul>
         <li>              
-          <a href="./index.html">
-                首页                    </a>&nbsp;|&nbsp;
-          <a href="./aboutus.html">
-                  公司简介                    </a>&nbsp;|&nbsp;
-          <a href="./carbon.html">
-                产品导航                    </a>&nbsp;|&nbsp;
-          <a href="./industry.html">
-                应用知识                    </a>&nbsp;|&nbsp;
-          <a href="./jobs.html">
-                招才纳贤                    </a>&nbsp;|&nbsp;
-          <a href="./feedback.html">
-                在线留言                    </a>&nbsp;|&nbsp;
-          <a href="./contactus.html">
-                联系我们                    </a>
+          <a href="./index.html">首页</a>&nbsp;|&nbsp;
+          <a href="./aboutus.html">公司简介</a>&nbsp;|&nbsp;
+          <a href="./application.html">产品导航</a>&nbsp;|&nbsp;
+          <a href="./knowledge.html">实用知识</a>&nbsp;|&nbsp;
+          <a href="./jobs.html">招才纳贤</a>&nbsp;|&nbsp;
+          <a href="./feedback.html">在线留言</a>&nbsp;|&nbsp;
+          <a href="./contactus.html">联系我们</a>
           </li>
         <li>			
           <p class="MsoNormal" style="margin-left: 0pt; text-indent: 0pt;">
@@ -230,3 +223,4 @@
 </body>
 
 </html>
+
