--- a/contactus.html
+++ b/contactus.html
@@ -6,10 +6,10 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<title>山东飞肯新材料科技有限公司</title>
-<meta name="keywords" content=""/>
-<meta name="description" content="山东飞肯新材料科技有限公司">
-
+<title>山东飞肯新材料科技有限公司-定制活性炭-Norit活性炭-法国CECA活性炭- Calgon活性炭-白鹭活性炭-Jacoby活性炭</title>
+<meta name="keywords" content="Norit活性炭,法国CECA活性炭,Calgon活性炭,白鹭活性炭,Jacoby活性炭,VOC尾气吸附,油气回收,溶剂回收,铜箔电解净化,冷凝水净化,山东飞肯新材料"/>
+<meta name="description" content="山东飞肯新材料-定制活性炭-Norit活性炭-法国CECA活性炭- Calgon活性炭-白鹭活性炭-Jacoby活性炭">
+    
 <link rel="stylesheet" type="text/css" href="./css/index.css">
 <link rel="stylesheet" type="text/css" href="./css/style.css">
 
@@ -19,12 +19,6 @@
 	.indexprodli a:hover{ color:#d40e43!important;}
 </style>
 
-<!--引用百度地图API-->
-<style type="text/css">
-  html,body{margin:0;padding:0;}
-  .iw_poi_title {color:#CC5522;font-size:14px;font-weight:bold;overflow:hidden;padding-right:13px;white-space:nowrap}
-  .iw_poi_content {font:12px arial,sans-serif;overflow:visible;padding-top:4px;white-space:-moz-pre-wrap;word-wrap:break-word}
-</style>
 </head>
 
 <body>
@@ -37,7 +31,7 @@
 
         <div id="toplog">
 
-            <a href="index.html" title="山东飞肯新材料科技有限公司"><img src="./image/logo.jpg"  height="70" style="margin: 5px;" alt="温州斐瑞德贸易有限公司" /></a>
+            <a href="./index.html" title="山东飞肯新材料科技有限公司"><img src="./image/logo.jpg"  height="70" style="margin: 5px;" alt="温州斐瑞德贸易有限公司" /></a>
 
         </div>
 
@@ -55,10 +49,10 @@
         <a href="./aboutus.html">公司简介</a>                             		
       </li>
       <li>
-        <a href="./carbon.html">产品导航</a>                          		
+        <a href="./application.html">应用导航</a>                          		
       </li>
       <li>
-        <a href="./industry.html">应用知识</a>                               		
+        <a href="./knowledge.html">实用知识</a>                               		
       </li>
       <li>
         <a href="./jobs.html">招才纳贤</a>                              		
@@ -127,24 +121,17 @@
 
 <div class="clear"></div>
   <!-- Footer ================================================== -->
-  <div  style=" background-color:#093075; width:100%; color:#fff; height:110px; margin-top:10px;"> 
+  <div  style=" background-color:#065eb1; width:100%; color:#fff; height:110px; margin-top:10px;"> 
       <div class="wdiv footercls" style="  text-align:center;overflow:hidden; padding-top:20px;">
       <ul>
         <li>              
-          <a href="./index.html">
-                首页                    </a>&nbsp;|&nbsp;
-          <a href="./aboutus.html">
-                  公司简介                    </a>&nbsp;|&nbsp;
-          <a href="./carbon.html">
-                产品导航                    </a>&nbsp;|&nbsp;
-          <a href="./industry.html">
-                应用知识                    </a>&nbsp;|&nbsp;
-          <a href="./jobs.html">
-                招才纳贤                    </a>&nbsp;|&nbsp;
-          <a href="./feedback.html">
-                在线留言                    </a>&nbsp;|&nbsp;
-          <a href="./contactus.html">
-                联系我们                    </a>
+          <a href="./index.html">首页</a>&nbsp;|&nbsp;
+          <a href="./aboutus.html">公司简介</a>&nbsp;|&nbsp;
+          <a href="./application.html">产品导航</a>&nbsp;|&nbsp;
+          <a href="./knowledge.html">实用知识</a>&nbsp;|&nbsp;
+          <a href="./jobs.html">招才纳贤</a>&nbsp;|&nbsp;
+          <a href="./feedback.html">在线留言</a>&nbsp;|&nbsp;
+          <a href="./contactus.html">联系我们</a>
           </li>
         <li>			
           <p class="MsoNormal" style="margin-left: 0pt; text-indent: 0pt;">
@@ -173,8 +160,6 @@
     </div>
   </div>
 </body>
+
 </html>
-
-
-
 
