--- a/aboutus.html
+++ b/aboutus.html
@@ -6,9 +6,9 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<title>山东飞肯新材料科技有限公司</title>
-<meta name="keywords" content=""/>
-<meta name="description" content="山东飞肯新材料科技有限公司">
+<title>山东飞肯新材料科技有限公司-定制活性炭-Norit活性炭-法国CECA活性炭- Calgon活性炭-白鹭活性炭-Jacoby活性炭</title>
+<meta name="keywords" content="Norit活性炭,法国CECA活性炭,Calgon活性炭,白鹭活性炭,Jacoby活性炭,VOC尾气吸附,油气回收,溶剂回收,铜箔电解净化,冷凝水净化,山东飞肯新材料"/>
+<meta name="description" content="山东飞肯新材料-定制活性炭-Norit活性炭-法国CECA活性炭- Calgon活性炭-白鹭活性炭-Jacoby活性炭">
     
 <link rel="stylesheet" type="text/css" href="./css/index.css">
 <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -31,7 +31,7 @@
 
         <div id="toplog">
 
-            <a href="index.html" title="山东飞肯新材料科技有限公司"><img src="./image/logo.jpg"  height="70" style="margin: 5px;" alt="温州斐瑞德贸易有限公司" /></a>
+            <a href="./index.html" title="山东飞肯新材料科技有限公司"><img src="./image/logo.jpg"  height="70" style="margin: 5px;" alt="温州斐瑞德贸易有限公司" /></a>
 
         </div>
 
@@ -49,10 +49,10 @@
         <a href="./aboutus.html">公司简介</a>                             		
       </li>
       <li>
-        <a href="./carbon.html">产品导航</a>                          		
+        <a href="./application.html">应用导航</a>                          		
       </li>
       <li>
-        <a href="./industry.html">应用知识</a>                               		
+        <a href="./knowledge.html">实用知识</a>                               		
       </li>
       <li>
         <a href="./jobs.html">招才纳贤</a>                              		
@@ -108,30 +108,25 @@
           <p style="text-indent:2em"><span style="font-size: 16px;">山东飞肯新材料科技有限公司，是一家由多名活性炭及精细化工领域十年以上资深人士发起创立的企业。基于我们对活性炭生产及应用领域的深刻理解，山东飞肯新材料立志于为客户提供完整的专业定制化解决方案！公司目前已与多家世界著名的活性炭生产企业展开了深入合作，涉及到的活性炭材质有烟煤，无烟煤，褐煤，泥煤，木质，椰壳，沥青，竹子等，从而能够更好地满足制药，食品，化工，催化剂，气体净化，水处理等行业对净化的需求。得力于中国合作伙伴的大力支持，山东飞肯新材料具备了对基碳进行酸洗、水洗、筛分、分装、配碳、改性等二次处理能力，同时拥有活性炭微观结构如孔径孔容、粒径分布等参数的强大数据库，可为客户提供定制化的脱杂筛碳方案。山东飞肯新材料，欢迎您的问询！</span></p>
         </div>
       </div>
+
+      <br>
   </div>
 
 </div>
 
 <div class="clear"></div>
   <!-- Footer ================================================== -->
-  <div  style=" background-color:#093075; width:100%; color:#fff; height:110px; margin-top:10px;"> 
+  <div  style=" background-color:#065eb1; width:100%; color:#fff; height:110px; margin-top:10px;"> 
       <div class="wdiv footercls" style="  text-align:center;overflow:hidden; padding-top:20px;">
       <ul>
         <li>              
-          <a href="./index.html">
-                首页                    </a>&nbsp;|&nbsp;
-          <a href="./aboutus.html">
-                  公司简介                    </a>&nbsp;|&nbsp;
-          <a href="./carbon.html">
-                产品导航                    </a>&nbsp;|&nbsp;
-          <a href="./industry.html">
-                应用知识                    </a>&nbsp;|&nbsp;
-          <a href="./jobs.html">
-                招才纳贤                    </a>&nbsp;|&nbsp;
-          <a href="./feedback.html">
-                在线留言                    </a>&nbsp;|&nbsp;
-          <a href="./contactus.html">
-                联系我们                    </a>
+          <a href="./index.html">首页</a>&nbsp;|&nbsp;
+          <a href="./aboutus.html">公司简介</a>&nbsp;|&nbsp;
+          <a href="./application.html">产品导航</a>&nbsp;|&nbsp;
+          <a href="./knowledge.html">实用知识</a>&nbsp;|&nbsp;
+          <a href="./jobs.html">招才纳贤</a>&nbsp;|&nbsp;
+          <a href="./feedback.html">在线留言</a>&nbsp;|&nbsp;
+          <a href="./contactus.html">联系我们</a>
           </li>
         <li>			
           <p class="MsoNormal" style="margin-left: 0pt; text-indent: 0pt;">
@@ -162,3 +157,4 @@
 </body>
 
 </html>
+
