--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <!--幻灯片-->
 
-<div style="height:1060px;height:300px;background:url(./image/application.jpg); background-position:center; background-repeat:no-repeat; width:100%;">
+<div style="height:1060px;height:300px;background:url(./image/application.jpg); background-position:center; background-repeat:no-repeat; width:100%; border-bottom:solid 1px #ddd;">
 </div>
 
 <!--幻灯片-->
