--- a/aboutus.html
+++ b/aboutus.html
@@ -122,7 +122,7 @@
         <li>              
           <a href="./index.html">首页</a>&nbsp;|&nbsp;
           <a href="./aboutus.html">公司简介</a>&nbsp;|&nbsp;
-          <a href="./application.html">产品导航</a>&nbsp;|&nbsp;
+          <a href="./application.html">应用导航</a>&nbsp;|&nbsp;
           <a href="./knowledge.html">实用知识</a>&nbsp;|&nbsp;
           <a href="./jobs.html">招才纳贤</a>&nbsp;|&nbsp;
           <a href="./feedback.html">在线留言</a>&nbsp;|&nbsp;
