--- a/application.html
+++ b/application.html
@@ -70,7 +70,7 @@
 <!--头部-->
 
 <p class="clear"></p> 
-<img src="./image/index.jpg" style="border-bottom:solid 1px #ddd;"/>
+<img src="./image/application.jpg" style="border-bottom:solid 1px #ddd;"/>
 <!--头部--> 
 <div class="wdiv1000"  style="margin-top:8px;">
 
@@ -79,7 +79,7 @@
     <div class="contLeftProds">        
     	<ul> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-            <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./carbon.html">活性炭在各行业的应用</a></div>
+            <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li>
             <a href="./chemical.html">化工行业</a>
@@ -114,18 +114,20 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 产品导航
+            当前位置:首页 >> 应用导航
           </div>
 
           <div class="conNeiText">  
-            <p style="text-indent:2em"><span style="font-size: 16px;">
-              山东飞肯新材料科技有限公司，是一家由多名活性炭及精细化工领域十年以上资深人士发起创立的企业。基于我们对活性炭生产及应用领域的深刻理解，山东飞肯新材料立志于为客户提供完整的专业定制化解决方案！公司目前已与多家世界著名的活性炭生产企业展开了深入合作，涉及到的活性炭材质有烟煤，无烟煤，褐煤，泥煤，木质，椰壳，沥青，竹子等，从而能够更好地满足制药，食品，化工，催化剂，气体净化，水处理等行业对净化的需求。得力于中国合作伙伴的大力支持，山东飞肯新材料具备了对基碳进行酸洗、水洗、筛分、分装、配碳、改性等二次处理能力，同时拥有活性炭微观结构如孔径孔容、粒径分布等参数的强大数据库，可为客户提供定制化的脱杂筛碳方案。山东飞肯新材料，欢迎您的问询！
-              </span>
+            <p style="text-indent:2em;font-size: 16px;">
+              活性炭是将各种类型的碳化料在一定条件下加热，以减少非碳成分，同时表面被侵蚀形成孔径发达的一种碳材料。
             </p>
-            活性炭是将各种类型的碳化料在一定条件下加热，以减少非碳成分，同时表面被侵蚀形成孔径发达的一种碳材料。
-            活性炭的原料有多种来源，常用有木质、煤质、椰壳、果壳等。从化学本质而言，实际是木制纤维素（五碳糖的高分子多糖聚合物）被侵蚀后碳链断裂同时石墨化的过程。活性炭主要有化学法及蒸汽法，通过调整活化时间、活化温度、活化进料比例等，可以实现活性炭孔径分布的调控。
-            活性炭因其化学结构、pH稳定，同时有非常发达及分布可控的特性，应用非常广泛！按照行业划分，活性炭可用于医药、食品、化工、气体、水、溶剂、金矿、催化剂、超级电容器等行业，根据其应用特性的不同，不同行业对于活性炭的参数诉求也不相同。飞肯新材的人员有着10年以上的活性炭研发及应用经验，可根据不同应用为客户精准筛选活性炭，同时提供废碳回收、碳罐更换等服务，欢迎前来咨询！
-            
+            <p style="text-indent:2em;font-size: 16px;">
+              活性炭的原料有多种来源，常用有木质、煤质、椰壳、果壳等。从化学本质而言，实际是木制纤维素（五碳糖的高分子多糖聚合物）被侵蚀后碳链断裂同时石墨化的过程。活性炭主要有化学法及蒸汽法，通过调整活化时间、活化温度、活化进料比例等，可以实现活性炭孔径分布的调控。
+            </p>
+            <p style="text-indent:2em;font-size: 16px;">
+              活性炭因其化学结构、pH稳定，同时有非常发达及分布可控的特性，应用非常广泛！按照行业划分，活性炭可用于医药、食品、化工、气体、水、溶剂、金矿、催化剂、超级电容器等行业，根据其应用特性的不同，不同行业对于活性炭的参数诉求也不相同。飞肯新材的人员有着10年以上的活性炭研发及应用经验，可根据不同应用为客户精准筛选活性炭，同时提供废碳回收、碳罐更换等服务，欢迎前来咨询！
+            </p>       
+                                    
             <strong style="line-height:50px;">活性炭在各行业的应用 :</strong>
             <br>
 
@@ -215,7 +217,7 @@
         <li>              
           <a href="./index.html">首页</a>&nbsp;|&nbsp;
           <a href="./aboutus.html">公司简介</a>&nbsp;|&nbsp;
-          <a href="./application.html">产品导航</a>&nbsp;|&nbsp;
+          <a href="./application.html">应用导航</a>&nbsp;|&nbsp;
           <a href="./knowledge.html">实用知识</a>&nbsp;|&nbsp;
           <a href="./jobs.html">招才纳贤</a>&nbsp;|&nbsp;
           <a href="./feedback.html">在线留言</a>&nbsp;|&nbsp;
