--- a/chemical2.html
+++ b/chemical2.html
@@ -70,7 +70,7 @@
 <!--头部-->
 
 <p class="clear"></p> 
-<img src="./image/product.jpg" style="border-bottom:solid 1px #ddd;"/>
+<img src="./image/application.jpg" style="border-bottom:solid 1px #ddd;"/>
 <!--头部--> 
 <div class="wdiv1000"  style="margin-top:8px;">
 
@@ -79,16 +79,16 @@
     <div class="contLeftProds">        
     	<ul> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./carbon.html">活性炭在各行业的应用</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-            <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical1.html">甘油脱色</a></div>
+            <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical2.html">甘油脱色</a></div>
         </li>      
         <li>
-            <a href="./chemical2.html">润滑油脱色</a>
+            <a href="./chemical1.html">润滑油脱色</a>
         </li>
         <li>
             <a href="./chemical3.html">柠檬酸脱色</a>
@@ -111,12 +111,14 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 产品导航 >> 化工行业 >> 甘油脱色
+            当前位置:首页 >> 应用导航 >> 化工行业 >> 甘油脱色
           </div>
 
           <div class="conNeiText">  
-            <strong>甘油脱色 :</strong><br/>
-
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">甘油脱色Glycerin decoloring</h2> 
+            <div style="text-align:center;">
+              <img src="./image/chemical2-0.jpg" style="width: 80%;">
+            </div>
             <p style="text-indent: 2em;">甘油是生产生物柴油的主要副产品，按照纯度主要分为两种等级，药用级甘油及技术级甘油。药用级甘油主要可用于医药、食品及化妆品领域，如抗菌防腐剂、柔和剂、保湿剂、增塑剂、溶剂、甜味剂等，也广泛应用于口服、耳、眼、局部和肠道给药制剂，对颜色及纯度要求都非常高；而技术级甘油的主要用途为生产醇类或环氧氯丙烷产品，在一些特殊领域如高端电子材料用环氧氯丙烷也同样有较高的颜色及纯度要求。
             </p>
 
@@ -137,7 +139,7 @@
             <p class="clear"></p>
 
           </div>
-
+          <br>
       </div>    
 
     </div>
@@ -154,7 +156,7 @@
         <li>              
           <a href="./index.html">首页</a>&nbsp;|&nbsp;
           <a href="./aboutus.html">公司简介</a>&nbsp;|&nbsp;
-          <a href="./application.html">产品导航</a>&nbsp;|&nbsp;
+          <a href="./application.html">应用导航</a>&nbsp;|&nbsp;
           <a href="./knowledge.html">实用知识</a>&nbsp;|&nbsp;
           <a href="./jobs.html">招才纳贤</a>&nbsp;|&nbsp;
           <a href="./feedback.html">在线留言</a>&nbsp;|&nbsp;
