--- a/medicine7.html
+++ b/medicine7.html
@@ -82,26 +82,35 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
-        </li> 
-        <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
-        <li>
-            <a href="./chemical2.html">甘油脱色</a>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine.html">医药行业</a></div>
         </li>
+        <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine7.html">活性炭胶囊及片剂</a></div>
+        </li>  
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+          <a href="./medicine1.html">维生素类的脱色除杂</a>
+        </li>     
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+          <a href="./medicine2.html">酶制剂的纯化</a>
+        </li>    
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+          <a href="./medicine3.html">青霉素，头孢菌素等抗生素类的脱色</a>
+        </li>         
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+          <a href="./medicine4.html">造影剂类的脱色</a>
+        </li>         
+        <li>
+          <a href="./medicine5.html">多肽类的纯化</a>
+        </li>         
+        <li>
+          <a href="./medicine6.html">扑息热痛脱色</a>
+        </li>                 
+        <li>
+          <a href="./medicine8.html">血液灌流</a>
+        </li>         
+        <li>
+          <a href="./medicine9.html">化妆品</a>
+        </li>              
       </ul> 
     </div>  
 
@@ -111,65 +120,21 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 医药行业
           </div>
 
           <div class="conNeiText">  
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">活性炭胶囊及片剂 Activated carbon capsules & tablets</h2> 
+            <div style="text-align:center;">
+              <img src="./image/medicine7-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">活性炭因其巨大的比表面积及孔径分布，可非特异性的吸附多种有毒物质，与此同时，活性炭在人体内的化学性质非常稳定，不会对人体器官带来干扰，因此在国外常被用作肠胃道毒物的解毒剂。
+            </p>
+            <p style="text-indent: 2em;">另外，随着人们生活条件的改善，一些富贵病如高血脂等容易引起健康问题，活性炭作为保健品行业的降脂胶囊，也可用于预防高血脂。
+            </p>       
             
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
-
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
