--- a/news.html
+++ b/news.html
@@ -71,7 +71,7 @@
 
 <p class="clear"></p> 
 <!--头部-->
-<img src="./image/industry.jpg" style="border-bottom:solid 1px #ddd;"/>
+<img src="./image/knowledge.jpg" style="border-bottom:solid 1px #ddd;"/>
 <div class="wdiv1000" style="margin-top:8px;" >
     <div class="conNeiRong" style="background-color:#fff;">
         <div class="conNeiTitle" style="background-color:#fff; text-indent:10px; text-align:left;">
@@ -79,15 +79,15 @@
         <div class="conNeiText">
             <div style=" width:240px; float:right; margin-right:0px;">
         <div class="divleft">
-          应用知识
+          实用知识
         </div>
         <div class="contLeft2">
           <ul>  
             <li  style=' height:35px;border:none; border-bottom:solid 1px #CCC; background-color:#fff; padding-top:8px; '>
-              <a style='color:#4d4b4c;' href="./company.html">&nbsp;&nbsp;>&nbsp;&nbsp;公司新闻</a>
+              <a style='color:#4d4b4c;' href="./news.html">&nbsp;&nbsp;>&nbsp;&nbsp;公司新闻</a>
             </li>         
             <li  style=' height:35px;border:none; border-bottom:solid 1px #CCC; background-color:#fff; padding-top:8px; '>
-              <a style='color:#4d4b4c;' href="./industry.html">&nbsp;&nbsp;>&nbsp;&nbsp;应用知识</a>
+              <a style='color:#4d4b4c;' href="./knowledge.html">&nbsp;&nbsp;>&nbsp;&nbsp;实用知识</a>
             </li>
             <li style="height:10px; background-color:#FFF;">
             </li>
@@ -98,12 +98,8 @@
                 <div id="newslist">
                   <ul>                      
                     <li>
-                        <a href="126.html">温州斐瑞德贸易有限公司启用新网址....</a>
-                        <span>[2019-04-24]</span>
-                    </li>
-                    <li>
-                        <a href="125.html">热烈庆祝温州斐瑞德贸易有限公司企业官网开通</a>
-                        <span>[2019-04-24]</span>
+                        <a href="./news1.html">庆祝山东飞肯新材料科技有限公司企业官网开通</a>
+                        <span>[2020-03-03]</span>
                     </li>                       
                   </ul> 
                </div>
@@ -123,7 +119,7 @@
         <li>              
           <a href="./index.html">首页</a>&nbsp;|&nbsp;
           <a href="./aboutus.html">公司简介</a>&nbsp;|&nbsp;
-          <a href="./application.html">产品导航</a>&nbsp;|&nbsp;
+          <a href="./application.html">应用导航</a>&nbsp;|&nbsp;
           <a href="./knowledge.html">实用知识</a>&nbsp;|&nbsp;
           <a href="./jobs.html">招才纳贤</a>&nbsp;|&nbsp;
           <a href="./feedback.html">在线留言</a>&nbsp;|&nbsp;
