--- a/chemical1.html
+++ b/chemical1.html
@@ -70,7 +70,7 @@
 <!--头部-->
 
 <p class="clear"></p> 
-<img src="./image/product.jpg" style="border-bottom:solid 1px #ddd;"/>
+<img src="./image/application.jpg" style="border-bottom:solid 1px #ddd;"/>
 <!--头部--> 
 <div class="wdiv1000"  style="margin-top:8px;">
 
@@ -79,7 +79,7 @@
     <div class="contLeftProds">        
     	<ul> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./carbon.html">活性炭在各行业的应用</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
@@ -111,12 +111,14 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 产品导航 >> 化工行业 >> 润滑油脱色
+            当前位置:首页 >> 应用导航 >> 化工行业 >> 润滑油脱色
           </div>
 
           <div class="conNeiText">  
-            <strong>润滑油脱色 :</strong><br/>
-
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">润滑油脱色Lubricants decoloring</h2> 
+            <div style="text-align:center;">
+              <img src="./image/chemical1-0.jpg" style="width: 80%;">
+            </div>
             <p style="text-indent: 2em;">颜色是石油产品的一项重要指标，直接反映出石油产品的精制程度和稳定性，我国石油产品颜色测定法把石油产品的颜色分为16个色号。依次加深为1.0，1.5，2.0……颜色最深的为8.0。润滑油是由基础油再加入少量的添加剂组成，基础油的颜色从白色、淡黄色到深褐色，色泽可作为判断基础油精制的深度，色泽的深浅取决于油中胶质含量的多少，胶质除去的越多，色泽就越浅，也就是油越纯，相对而言油越纯质量也越好。
             </p>
             
@@ -131,7 +133,7 @@
             </p>
 
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
@@ -150,7 +152,7 @@
         <li>              
           <a href="./index.html">首页</a>&nbsp;|&nbsp;
           <a href="./aboutus.html">公司简介</a>&nbsp;|&nbsp;
-          <a href="./application.html">产品导航</a>&nbsp;|&nbsp;
+          <a href="./application.html">应用导航</a>&nbsp;|&nbsp;
           <a href="./knowledge.html">实用知识</a>&nbsp;|&nbsp;
           <a href="./jobs.html">招才纳贤</a>&nbsp;|&nbsp;
           <a href="./feedback.html">在线留言</a>&nbsp;|&nbsp;
