--- a/chemical5.html
+++ b/chemical5.html
@@ -84,9 +84,12 @@
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
         </li> 
+        <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+            <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical5.html" >农化产品的纯化</a></div>
+        </li>  
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
+          <a href="./chemical1.html">润滑油脱色</a>
+        </li>    
         <li>
             <a href="./chemical2.html">甘油脱色</a>
         </li>
@@ -95,9 +98,6 @@
         </li>
         <li>
             <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
-        <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
         </li>
         <li>
           <a href="./chemical6.html" >胺液的净化</a>
@@ -111,65 +111,18 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 化工行业 >> 农化产品的纯化
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">农化产品的纯化Agrochemical purification</h2> 
+            <div style="text-align:center;">
+              <img src="./image/chemical5-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">农化产品的原药以化学合成为主，在生产制备过程中，一般多会带有黄色，可采用活性炭热过滤的方法脱色，采用硅藻土助滤及二级过滤系统，可以高效脱色。</p>
 
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
