--- a/food1.html
+++ b/food1.html
@@ -82,26 +82,32 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
         </li> 
+		    <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food1.html">蔗糖脱色</a></div>
+        </li>  
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
+            <a href="./food2.html">淀粉糖的脱色</a>
+        </li>   
+        <li>
+            <a href="./food3.html">食用油中脱除PAH</a>
         </li>       
         <li>
-            <a href="./chemical2.html">甘油脱色</a>
-        </li>
+            <a href="./food4.html">果汁的纯化</a>
+        </li>  
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+            <a href="./food5.html">酒类的除杂</a>
+        </li>       
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+            <a href="./food6.html">乳酸，乳糖的脱色</a>
+        </li>  
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+        </li>       
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+            <a href="./food8.html">植物炭黑</a>
+        </li>  		
       </ul> 
     </div>  
 
@@ -111,65 +117,24 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 食品行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">蔗糖脱色 Sucrose decoloring</h2> 
+            <div style="text-align:center;">
+              <img src="./image/food1-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">现在主流的制糖方法为二步法，首先采用较为简单的工艺制得粗糖，初步制得的原糖品质较差，为了进一步得到纯度较高的优质白糖和精制糖，糖厂需要对原糖糖浆进行澄清以得到清糖浆，主要澄清方法有二次二氧化碳饱冲过滤法和高效磷浮过滤法。
+            </p>
+            <div style="text-align:center;">
+              <img src="./image/food1-1.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">清糖浆的脱色工序是提高糖液质量的关键步骤，在甘蔗提炼蔗糖的过程中，得到的糖浆中含有大量杂质，如色素、碱降解产物、焦糖及其他热分解产物等，这些杂质影响蔗糖的结晶与口感，需要尽量去除。目前采用的脱色剂主要包括三种：离子交换树脂、颗粒活性炭以及粉末活性炭。采用颗粒活性炭脱色系统辅之配套的活性炭再生系统，从长期生产角度看来是成本最为低廉的一种方式。
+            </p>
 
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
