--- a/food3.html
+++ b/food3.html
@@ -82,26 +82,32 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+        </li> 
+		<li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food3.html">食用油中脱除PAH</a></div>
         </li> 
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
+            <a href="./food1.html">蔗糖脱色</a>
         </li>       
         <li>
-            <a href="./chemical2.html">甘油脱色</a>
-        </li>
+            <a href="./food2.html">淀粉糖的脱色</a>
+        </li>   
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+            <a href="./food4.html">果汁的纯化</a>
+        </li>  
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+            <a href="./food5.html">酒类的除杂</a>
+        </li>       
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+            <a href="./food6.html">乳酸，乳糖的脱色</a>
+        </li>  
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+        </li>       
+        <li>
+            <a href="./food8.html">植物炭黑</a>
+        </li>  		
       </ul> 
     </div>  
 
@@ -111,65 +117,27 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 食品行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">食用油中脱除PAH  PAH remove in Edible Oil</h2> 
+            <div style="text-align:center;">
+              <img src="./image/food3-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">多环芳烃（PAH）是一类分子中含有两个以上苯环的碳氢化合物，由有机物质的不完全燃烧和高温分解产生，具有很强的致癌性。通常，油脂中含PAH主要有以下几种原因：烟熏烘干原料（椰子油、葵花油、橄榄油等），环境污染（菜籽油、鱼油），油轮、容器的污染（橄榄油、棕榈油）。
+            </p>
 
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
+            <p style="text-indent: 2em;">食用油在生产过程中，经常会使用白土进行脱色。白土可以去除色素、皂、磷脂等杂质，但对于多环芳烃、二噁英的去除效果较差，此时需要使用活性炭进行进一步精炼。活性炭在使用时，可以与白土按一定比例混合直接过滤；也可以串联在白土吸附流程后面作二级处理。
+            </p>
+            <p style="text-indent: 2em;">常用的油脂活性炭包括粉末炭和颗粒炭。因为吸附饱和的颗粒炭可进行再生处理，能降成本、减少环境污染，所以会得到越来越广泛的应用。
+            </p>
 
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
+            <div style="text-align:center;">
+              <img src="./image/food3-2.jpg" style="width: 80%;">
+            </div>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
