--- a/food4.html
+++ b/food4.html
@@ -82,26 +82,32 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+        </li> 
+		<li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food4.html">果汁的纯化</a></div>
         </li> 
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
+            <a href="./food1.html">蔗糖脱色</a>
         </li>       
         <li>
-            <a href="./chemical2.html">甘油脱色</a>
-        </li>
+            <a href="./food2.html">淀粉糖的脱色</a>
+        </li>   
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+            <a href="./food3.html">食用油中脱除PAH</a>
+        </li>       
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+            <a href="./food5.html">酒类的除杂</a>
+        </li>       
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+            <a href="./food6.html">乳酸，乳糖的脱色</a>
+        </li>  
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+        </li>       
+        <li>
+            <a href="./food8.html">植物炭黑</a>
+        </li>  		
       </ul> 
     </div>  
 
@@ -111,65 +117,21 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 食品行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">果汁的纯化 Purification of Juice</h2> 
+            <div style="text-align:center;">
+              <img src="./image/food4-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">活性炭产品在饮料行业有着广泛的应用，可以吸附产品中的杂质，实现以下效果：1.除异味；2除异臭；3、稳定颜色。此外，活性炭可以用于饮料用水，吸附水体中的消毒剂、农药和其他有机杂质，使饮料产品符合国际卫生标准。
+            </p>
+            <p style="text-indent: 2em;">饮料工业既使用粉末活性炭，也使用颗粒活性炭，具体选择取决于生产过程。粉状活性炭一般用于批处理净化，颗粒活性炭适合连续加工。
+            </p>
 
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
