--- a/food5.html
+++ b/food5.html
@@ -82,26 +82,32 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+        </li> 
+		<li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food5.html">酒类的除杂</a></div>
         </li> 
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
+            <a href="./food1.html">蔗糖脱色</a>
         </li>       
         <li>
-            <a href="./chemical2.html">甘油脱色</a>
-        </li>
+            <a href="./food2.html">淀粉糖的脱色</a>
+        </li>   
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+            <a href="./food3.html">食用油中脱除PAH</a>
+        </li>       
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+            <a href="./food4.html">果汁的纯化</a>
+        </li>        
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+            <a href="./food6.html">乳酸，乳糖的脱色</a>
+        </li>  
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+            <a href="./food7.html">咖啡或茶中脱除咖啡因</a>
+        </li>       
+        <li>
+            <a href="./food8.html">植物炭黑</a>
+        </li>  		
       </ul> 
     </div>  
 
@@ -111,65 +117,26 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 食品行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
-
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">酒类的除杂  Wine purification</h2> 
+            <div style="text-align:center;">
+              <img src="./image/food5-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">国外酿造行业，像威士忌、白兰地、伏特加、啤酒、葡萄酒、清酒及酒精饮料厂家常用活性炭来提高质量、改善风味；我国酒业对此应用也在逐步扩展。活性炭在改进酒品质方面有很多优良的效果：
+            </p>
+            <p style="text-indent: 2em;">（1）低度白酒除浊。在低度白酒生产中，因其中的高级脂肪酸乙酯、高级脂肪酸醇的溶解度降低，导致呈乳状浑浊，呈失光现象。因为乙酸乙酯是保持此类酒风味的关键，在吸附高级脂肪酸酯的同时要尽量减少乙酸乙酯的损失，所以选择对活性炭的选择需要慎重考虑。
+            </p>
+            <p style="text-indent: 2em;">（2） 去除苦味和异味。白酒生产中由于发酵、蒸馏等操作不慎，使白酒有苦味。含氮的微孔发达的碱性酒类专用炭可有效地去除苦味；异味由于酿制过程控制不当，或对原料操作不妥，或来自采用液态发酵，或存在于刚蒸出的白酒，视情况需要选用不同孔隙结构的活性炭。
+            </p>
+            <p style="text-indent: 2em;">（3）加速白酒的陈化、老熟。活性炭巨大的比表面积和丰富的官能团可以加快乙醇-乙醛-乙酸的过程，同时料液中的酸进一步与醇生成乙酸乙酯、高级脂肪酸酯，大幅缩短产品生产周期。
+            </p>
+            <p style="text-indent: 2em;">（4） 去除果酒中的果胶、啤酒中的沉淀物。
+            </p>
             <p class="clear"></p>
-
+			      <br>
           </div>
 
       </div>    
