--- a/food7.html
+++ b/food7.html
@@ -82,26 +82,32 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food.html">食品行业</a></div>
+        </li> 
+		<li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./food7.html">咖啡或茶中脱除咖啡因</a></div>
         </li> 
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
+            <a href="./food1.html">蔗糖脱色</a>
         </li>       
         <li>
-            <a href="./chemical2.html">甘油脱色</a>
-        </li>
+            <a href="./food2.html">淀粉糖的脱色</a>
+        </li>   
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+            <a href="./food3.html">食用油中脱除PAH</a>
+        </li>       
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+            <a href="./food4.html">果汁的纯化</a>
+        </li>  
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+            <a href="./food5.html">酒类的除杂</a>
+        </li>       
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+            <a href="./food6.html">乳酸，乳糖的脱色</a>
+        </li>  
+        <li>
+            <a href="./food8.html">植物炭黑</a>
+        </li>  		
       </ul> 
     </div>  
 
@@ -111,65 +117,21 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 食品行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">咖啡或茶中脱除咖啡因 Remove of Caffeine in coffee and tea</h2> 
+            <div style="text-align:center;">
+              <img src="./image/food7-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">咖啡因是一种黄嘌呤生物碱化合物，是一种中枢神经兴奋剂，能够暂时的驱走睡意并恢复精力，临床上用于治疗神经衰弱和昏迷复苏。有咖啡因成分的咖啡、茶、软饮料及能量饮料十分畅销，因此，咖啡因也是世界上最普遍被使用的精神药品。但长期大量摄入咖啡因，会对神经系统和心脏会产生一定不良影响，可能导致心悸、高血压、呕吐、精神异常等，甚至可能造成死亡。因此。低咖啡因的咖啡、茶饮料近年来备受关注。
+            </p>
+            <p style="text-indent: 2em;">有一种“低因咖啡处理法(Swiss Water Process)”，在这种工艺中，使用水浸泡绿色的、未烘焙的咖啡豆萃取咖啡因，使用活性碳除去混合物中的咖啡因。将脱咖啡因的咖啡豆干燥并烘焙，烘焙赋予咖啡独特风味。
+            </p>
 
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
