--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <!--幻灯片-->
 
-<div style="height:1060px;height:300px;background:url(./image/application.jpg); background-position:center; background-repeat:no-repeat; width:100%; border-bottom:solid 1px #ddd;">
+<div style="width:1060px;height:300px;background:url(./image/index.jpg); margin: 0 auto; background-repeat:no-repeat; border-bottom:solid 1px #ddd;">
 </div>
 
 <!--幻灯片-->
@@ -177,8 +177,8 @@
 
   </div>  
 
-  <div class="wdiv" style="  height:320px;"> 
-    <div style="float:left; width:520px; height:320px; overflow:hidden;">
+  <div class="wdiv" style="  height:290px;"> 
+    <div style="float:left; width:520px; height:290px; overflow:hidden;">
 
       <div>
         <div style="float: left; height: 20px;">
@@ -197,11 +197,11 @@
         <p style="text-indent: 2em;">山东飞肯新材料科技有限公司，是一家由多名活性炭及精细化工领域十年以上资深人士发起创立的企业。基于我们对活性炭生产及应用领域的深刻理解，山东飞肯新材料立志于为客户提供完整的专业定制化解决方案！公司目前已与多家世界著名的活性炭生产企业展开了深入合作，涉及到的活性炭材质有烟煤，无烟煤，褐煤，泥煤，木质，椰壳，沥青，竹子等，从而能够更好地满足制药，食品，化工，催化剂，气体净化，水处理等行业对净化的需求。得力于中国合作伙伴的大力支持，山东飞肯新材料具备了对基碳进行酸洗、水洗、筛分、分装、配碳、改性等二次处理能力，同时拥有活性炭微观结构如孔径孔容、粒径分布等参数的强大数据库，可为客户提供定制化的脱杂筛碳方案。山东飞肯新材料，欢迎您的问询！
           <a href="./aboutus.html" ><span style="font-size: 9pt;">[点击查看详情]</span></a>
         </p>
-        <img src="./image/aboutus.jpg" width="100%"/>
+        <img src="./image/aboutus-small.jpg" width="100%"/>
       </div>
     </div>
     
-    <div style="float:right; width:520px; height:320px; overflow:hidden;">
+    <div style="float:right; width:520px; height:290px; overflow:hidden;">
       <div>
         <div style="float: left; height: 20px;">
           <p>
@@ -218,31 +218,27 @@
       <div style="width: 100%; margin-top: 30px; text-align: left;">
         <ul> 
           <li class='indexnewslist'>
-            <a href="132.html">&middot;&nbsp;什么是活性炭？</a><span>2019-04-24</span>
+            <a href="./knowledge1.html">&middot;&nbsp;活性炭参数的基础知识</a><span>2020-03-03</span>
           </li> 
 
           <li class='indexnewslist'>
-            <a href="131.html" >&middot;&nbsp;离子交换树脂的储存、预处理及运输注意事项</a><span>2019-04-24</span>
+            <a href="./knowledge2.html" >&middot;&nbsp;脱色的基础知识</a><span>2020-03-03</span>
           </li> 
 
           <li class='indexnewslist'>
-            <a href="130.html" >&middot;&nbsp;水处理用树脂的预处理</a><span>2019-04-24</span>
+            <a href="./knowledge3.html" >&middot;&nbsp;微管道反应选用颗粒碳</a><span>2020-03-03</span>
           </li> 
 
           <li class='indexnewslist'>
-            <a href="129.html" >&middot;&nbsp;离子交换树脂的基本性能</a><span>2019-04-24</span>
+            <a href="./knowledge4.html" >&middot;&nbsp;活性炭孔特征</a><span>2020-03-03</span>
           </li> 
 
           <li class='indexnewslist'>
-            <a href="128.html">&middot;&nbsp;进口活性炭在制药行业的应用</a><span>2019-04-24</span>
+            <a href="./application.html" >&middot;&nbsp;活性炭在各行业的应用</a><span>2020-03-03</span>
           </li> 
 
           <li class='indexnewslist'>
-            <a href="127.html">&middot;&nbsp;进口活性炭的性能和特点</a><span>2019-04-24</span>
-          </li> 
-
-          <li class='indexnewslist'>
-            <a href="127.html">&middot;&nbsp;进口活性炭的性能和特点</a><span>2019-04-24</span>
+            <a href="./news1.html">&middot;&nbsp;山东飞肯新材料科技有限公司企业官网开通</a><span>2020-03-03</span>
           </li> 
 
           <li class='indexnewslist'>
@@ -354,7 +350,7 @@
         <li>              
           <a href="./index.html">首页</a>&nbsp;|&nbsp;
           <a href="./aboutus.html">公司简介</a>&nbsp;|&nbsp;
-          <a href="./application.html">产品导航</a>&nbsp;|&nbsp;
+          <a href="./application.html">应用导航</a>&nbsp;|&nbsp;
           <a href="./knowledge.html">实用知识</a>&nbsp;|&nbsp;
           <a href="./jobs.html">招才纳贤</a>&nbsp;|&nbsp;
           <a href="./feedback.html">在线留言</a>&nbsp;|&nbsp;
