--- a/knowledge1.html
+++ b/knowledge1.html
@@ -70,7 +70,7 @@
 <!--头部-->
 
 <p class="clear"></p> 
-<img src="./image/application.jpg" style="border-bottom:solid 1px #ddd;"/>
+<img src="./image/knowledge.jpg" style="border-bottom:solid 1px #ddd;"/>
 <!--头部--> 
 <div class="wdiv1000"  style="margin-top:8px;">
 
@@ -79,28 +79,22 @@
     <div class="contLeftProds">        
     	<ul> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
+            <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./knowledge.html">实用知识</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./knowledge1.html">活性炭参数的基础知识</a></div>
         </li> 
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
-        <li>
-            <a href="./chemical2.html">甘油脱色</a>
+            <a href="./knowledge2.html">脱色的基础知识</a>
         </li>
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
+            <a href="./knowledge3.html">微管道反应选用颗粒碳</a>
         </li>
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
+            <a href="./knowledge4.html" >活性炭孔特征</a>
         </li>
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
-        <li>
-          <a href="./chemical6.html" >胺液的净化</a>
+          <a href="./application.html" >活性炭在各行业的应用</a>
         </li>
       </ul> 
     </div>  
@@ -111,65 +105,26 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 实用知识
           </div>
 
-          <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
-
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
+          <div class="conNeiText"> 
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">活性炭参数的基础知识</h2> 
+            <p style="text-indent:2em;font-size: 16px;">
+              一般活性炭的参数中有碘值、亚甲蓝、糖蜜等，通过活性炭吸附这些材料的能力，来反馈活性炭的活化程度及孔径分布的大概状况，其中碘分子大小一般在0.5nm；亚甲蓝1.5nm，糖蜜3nm以上。
+            </p>
+            <p style="text-indent:2em;font-size: 16px;">
+              不同国家的碘值几乎一致，而亚甲蓝不同标准测试的结果差别较大，如美国采用ASTM，欧洲采用Cefic，日本采用JIS，中国采用GB，所用的亚甲蓝浓度不一致，单位也不一致，因此在对比数据时需要留意。而对于糖蜜，美国、欧洲均采用的是吸附百分比换算成一个数值，美国看吸附值，欧洲看剩余值，因此美国糖蜜的数值越大越好，欧洲糖蜜的数值越小越好。
+            </p>
+            <p style="text-indent:2em;font-size: 16px;">
+              活性炭在活化过程中，根据不同的活化条件，其表面会有不同官能团。一般化学法官能团较多，蒸汽法相对较少。
+            </p>       
+            <p style="text-indent:2em;font-size: 16px;">
+              活性炭并非比表面积越大越好，或者某一参数越高越好，而是需要评估其适用性，即有效孔！有时候比表面积大，并不代表有效孔多，一般微孔越发达比表面积越大，但在某些脱色或者催化领域，微孔往往无法利用，因此最终活性炭的筛选需要匹配其应用。
+            </p>                             
+                                                            
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
