--- a/knowledge2.html
+++ b/knowledge2.html
@@ -70,7 +70,7 @@
 <!--头部-->
 
 <p class="clear"></p> 
-<img src="./image/application.jpg" style="border-bottom:solid 1px #ddd;"/>
+<img src="./image/knowledge.jpg" style="border-bottom:solid 1px #ddd;"/>
 <!--头部--> 
 <div class="wdiv1000"  style="margin-top:8px;">
 
@@ -79,28 +79,22 @@
     <div class="contLeftProds">        
     	<ul> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
+            <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./knowledge.html">实用知识</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./knowledge2.html">脱色的基础知识</a></div>
         </li> 
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
-        <li>
-            <a href="./chemical2.html">甘油脱色</a>
+          <a href="./knowledge1.html">活性炭参数的基础知识</a>
         </li>
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
+            <a href="./knowledge3.html">微管道反应选用颗粒碳</a>
         </li>
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
+            <a href="./knowledge4.html" >活性炭孔特征</a>
         </li>
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
-        <li>
-          <a href="./chemical6.html" >胺液的净化</a>
+          <a href="./application.html" >活性炭在各行业的应用</a>
         </li>
       </ul> 
     </div>  
@@ -111,65 +105,29 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 实用知识
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
-
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">脱色的基础知识</h2> 
+            <p style="text-indent:2em;font-size: 16px;">
+              颜色产生的本质是因为吸光，一般有两种情况，一种是含有金属离子，如Fe，Cu等，本身的电子结构就能吸光；一种是Π的离域，共轭效应越强，需要的能量越小，越容易吸收可见光。按照光的能量排序，红橙黄绿青蓝紫，紫光能量最大。按照补色理论：
+            </p>
+            <div style="text-align:center;">
+              <img src="./image/konwledge2-1.jpg" style="width: 50%;">
+            </div>
+            <p style="text-indent:2em;font-size: 16px;">
+              从这个图中可以看到，如果物质颜色是绿色/蓝绿色/蓝色/紫色等，说明吸收的是红色，共轭效应很强；如果是黄色或者橙色，说明吸收的是紫光或者蓝紫光，共轭效应比较弱。大部分物质吸收的都是紫外光才能发生分子跃迁，因此是不会显示颜色的。显示出颜色的，一般都是有一定的共轭效应。
+            </p>
+            <p style="text-indent:2em;font-size: 16px;">
+              共轭效应与分子量没有绝对关系，只是跟分子的共轭基团有关系，比如双键、羰基、偶氮、硝基、亚硝基、醌类、磺酸基等，这些基团都有不饱和双键或者孤对电子。另外 一些助色(给电子基团）如-Cl，-OR等，可以增加吸光的概率。
+            </p>       
+            <p style="text-indent:2em;font-size: 16px;">
+              举个例子，硝基苯无色，邻氯硝基苯就是黄色。邻氯硝基苯的分子很小，但也可以有颜色，因为硝基有一个双键+孤对电子，与苯环形成超共轭，再加上氯的供电作用，就容易吸光。
+            </p>
+                                                            
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
