--- a/knowledge3.html
+++ b/knowledge3.html
@@ -70,7 +70,7 @@
 <!--头部-->
 
 <p class="clear"></p> 
-<img src="./image/application.jpg" style="border-bottom:solid 1px #ddd;"/>
+<img src="./image/knowledge.jpg" style="border-bottom:solid 1px #ddd;"/>
 <!--头部--> 
 <div class="wdiv1000"  style="margin-top:8px;">
 
@@ -79,28 +79,22 @@
     <div class="contLeftProds">        
     	<ul> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
+            <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./knowledge.html">实用知识</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./knowledge3.html">微管道反应选用颗粒碳</a></div>
         </li> 
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
-        <li>
-            <a href="./chemical2.html">甘油脱色</a>
+          <a href="./knowledge1.html">活性炭参数的基础知识</a>
         </li>
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
+          <a href="./knowledge2.html">脱色的基础知识</a>
         </li>
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
+            <a href="./knowledge4.html" >活性炭孔特征</a>
         </li>
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
-        <li>
-          <a href="./chemical6.html" >胺液的净化</a>
+          <a href="./application.html" >活性炭在各行业的应用</a>
         </li>
       </ul> 
     </div>  
@@ -111,65 +105,23 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 实用知识
           </div>
 
-          <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
-
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
+          <div class="conNeiText">
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">微管道反应选用颗粒碳</h2>   
+            <p style="text-indent:2em;font-size: 16px;">
+              随着化工领域对环保及安全生产的要求越来越高，目前微管道反应正成为越来越多工厂的选择。
+            </p>
+            <p style="text-indent:2em;font-size: 16px;">
+              微管道反应速率快，反应条件控制相较于釜反应更精确，而且属于连续投料，不必担心一次性投料过多而导致反应难控制，更安全，产生的三废相对少。传统反应釜一般选择粉末活性炭，因其脱色效果更好，但粉末炭过滤速度慢，而且不可连续化，对于微管道反应而言将会降低其效率。在微管道部件中加入碳罐模组，其中碳罐中充装有颗粒或者柱状活性炭，可有效支持微管道反应的脱色后处理环节。
+            </p>
+            <p style="text-indent:2em;font-size: 16px;">
+              一般粉末炭无法再生，而颗粒碳可再生。再生有原位蒸汽再生（一般是用一个大的碳罐直接再生），或者是用柠檬酸/NaOH浸泡后再水洗。
+            </p>                                   
+                                                            
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
