--- a/knowledge4.html
+++ b/knowledge4.html
@@ -70,7 +70,7 @@
 <!--头部-->
 
 <p class="clear"></p> 
-<img src="./image/application.jpg" style="border-bottom:solid 1px #ddd;"/>
+<img src="./image/knowledge.jpg" style="border-bottom:solid 1px #ddd;"/>
 <!--头部--> 
 <div class="wdiv1000"  style="margin-top:8px;">
 
@@ -79,28 +79,22 @@
     <div class="contLeftProds">        
     	<ul> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
+            <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./knowledge.html">实用知识</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./knowledge4.html" >活性炭孔特征</a></div>
         </li> 
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
-        <li>
-            <a href="./chemical2.html">甘油脱色</a>
+          <a href="./knowledge1.html">活性炭参数的基础知识</a>
         </li>
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
+            <a href="./knowledge2.html">脱色的基础知识</a>
         </li>
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
+            <a href="./knowledge3.html">微管道反应选用颗粒碳</a>
         </li>
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
-        <li>
-          <a href="./chemical6.html" >胺液的净化</a>
+          <a href="./application.html" >活性炭在各行业的应用</a>
         </li>
       </ul> 
     </div>  
@@ -111,65 +105,28 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 实用知识
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
-
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">活性炭孔特征</h2> 
+            <p style="text-indent:2em;font-size: 16px;">
+              水蒸气活性炭孔为1000℃水蒸气冲击而得，一般得到的孔径较小；而化学法活性炭则是在600℃的磷酸氛围中不断侵蚀，先凿大孔，再不断渗入，因此套孔较多。
+            </p>
+            <p style="text-indent:2em;font-size: 16px;">
+              一般活化时间越长，活性炭的孔容和比表面积也越大。但随着活化时间越长，会导致碳材料不断侵蚀，从而造成活性炭孔结构更容易破碎，较容易在生产中造成碎碳，不利于其应用。
+            </p>
+            <p style="text-indent:2em;font-size: 16px;">
+              水蒸气法活化炭孔径小，适用浅色基团如浅黄色、浅绿色；化学法活化炭孔径大，适用深色洗脱，如褐色、红色、黑色。
+            </p>       
+            <p style="text-indent:2em;font-size: 16px;">
+              活性炭一般酸性下吸附能力更好，其吸附主要靠物理吸附（即毛细吸附），酸洗后其表面有羰基、羟基、羰基等含氧基团，对金属离子有一定静电吸附作用。对于有机物，活性炭极性增加，可对极性官能团吸附，同时还可以形成氢键。
+            </p>  
+            <p style="text-indent:2em;font-size: 16px;">
+              活性炭如果粒度太细，不容易过滤。粉末太细容易造成过滤的堵塞；另外粒度分布不均，导致细小颗粒吸附后迅速下沉造成堵塞。
+            </p>                                                                                                                                                             
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
