--- a/medicine.html
+++ b/medicine.html
@@ -82,26 +82,35 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine.html">医药行业</a></div>
         </li> 
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
+            <a href="./medicine1.html">维生素类的脱色除杂</a>
         </li>       
         <li>
-            <a href="./chemical2.html">甘油脱色</a>
-        </li>
+          <a href="./medicine2.html">酶制剂的纯化</a>
+        </li>   
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+          <a href="./medicine3.html">青霉素，头孢菌素等抗生素类的脱色</a>
+        </li>         
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+          <a href="./medicine4.html">造影剂类的脱色</a>
+        </li>         
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+          <a href="./medicine5.html">多肽类的纯化</a>
+        </li>         
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+          <a href="./medicine6.html">扑息热痛脱色</a>
+        </li>         
+        <li>
+          <a href="./medicine7.html">活性炭胶囊及片剂</a>
+        </li>         
+        <li>
+          <a href="./medicine8.html">血液灌流</a>
+        </li>         
+        <li>
+          <a href="./medicine9.html">化妆品</a>
+        </li>              
       </ul> 
     </div>  
 
@@ -111,62 +120,77 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 医药行业
           </div>
 
           <div class="conNeiText">  
             
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
+            <strong style="line-height:50px;">活性炭在医药行业的应用 :</strong>
             <br>
-
             <ul class="productapp">
               <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
+                <a href="./medicine1.html" >
+                  <img src="./image/medicine1.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
+                <a class="atext" href="./medicine1.html">维生素类的脱色除杂</a>
               </li>
-
               <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
+                <a href="./medicine2.html" >
+                  <img src="./image/medicine2.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
+                <a class="atext" href="./medicine3.html">酶制剂的纯化</a>
               </li>
-
               <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
+                <a href="./medicine3.html" >
+                  <img src="./image/medicine3.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
+                <a class="atext" href="./medicine3.html">青霉素，头孢菌素等抗生素类的脱色</a>
               </li>
-
               <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
+                <a href="./medicine4.html" >
+                  <img src="./image/medicine4.jpg"/>
                 </a>
                 <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
+                <a class="atext" href="./medicine4.html">造影剂类的脱色</a>
+              </li>
+              <li>
+                <a href="./medicine5.html" >
+                  <img src="./image/medicine5.jpg"/>
+                </a>
+                <br>
+                <a class="atext" href="./medicine5.html">多肽类的纯化</a>
+              </li>
+              <li>
+                <a href="./medicine6.html" >
+                  <img src="./image/medicine6.jpg"/>
+                </a>
+                <br>
+                <a class="atext" href="./medicine6.html">扑息热痛脱色</a>
+              </li>
+              <li>
+                <a href="./medicine7.html" >
+                  <img src="./image/medicine7.jpg"/>
+                </a>
+                <br>
+                <a class="atext" href="./medicine7.html">扑息热痛脱色</a>
+              </li>
+              <li>
+                <a href="./medicine8.html" >
+                  <img src="./image/medicine8.jpg"/>
+                </a>
+                <br>
+                <a class="atext" href="./medicine8.html">扑息热痛脱色</a>
+              </li>
+              <li>
+                <a href="./medicine9.html" >
+                  <img src="./image/medicine9.jpg"/>
+                </a>
+                <br>
+                <a class="atext" href="./medicine9.html">化妆品</a>
+              </li>
             </ul>
             <p class="clear"></p>
 
