--- a/medicine1.html
+++ b/medicine1.html
@@ -82,26 +82,35 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
-        </li> 
-        <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
-        <li>
-            <a href="./chemical2.html">甘油脱色</a>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine.html">医药行业</a></div>
         </li>
+        <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine1.html">维生素类的脱色除杂</a></div>
+        </li>      
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+          <a href="./medicine2.html">酶制剂的纯化</a>
+        </li>   
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+          <a href="./medicine3.html">青霉素，头孢菌素等抗生素类的脱色</a>
+        </li>         
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+          <a href="./medicine4.html">造影剂类的脱色</a>
+        </li>         
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+          <a href="./medicine5.html">多肽类的纯化</a>
+        </li>         
+        <li>
+          <a href="./medicine6.html">扑息热痛脱色</a>
+        </li>         
+        <li>
+          <a href="./medicine7.html">活性炭胶囊及片剂</a>
+        </li>         
+        <li>
+          <a href="./medicine8.html">血液灌流</a>
+        </li>         
+        <li>
+          <a href="./medicine9.html">化妆品</a>
+        </li>              
       </ul> 
     </div>  
 
@@ -111,65 +120,26 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 医药行业
           </div>
 
           <div class="conNeiText">  
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">维生素类的脱色除杂 Vitamin purification</h2> 
+            <div style="text-align:center;">
+              <img src="./image/medicine1-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">维生素是人们身体健康必不可少的元素，对机体的新陈代谢、生长、发育、健康有极重要作用。维生素均以维生素原的形式存在于食物中，大多数的维生素，机体不能合成或合成量不足，不能满足机体的需要，必须经常通过食物中获得。
+            </p>
+            <p style="text-indent: 2em;">维生素目前有维生素A，B1，B2，PP，B4，B5，B6，H（生物素），B9或M（叶酸），B12，肌醇，C、D、E、K1、K2、K3、K4等。   
+            </p>
+            <p style="text-indent: 2em;">维生素的生产多采用化学合成法，后来人们发现某些微生物可以完成维生素合成中的某些重要步骤；在此基础上，化学合成与生物转化相结合的半合成法在维生素生产中得到了广泛应用，目前可以用发酵法或半合成法生产的维生素有VC、VB2、VB12、VD、以及β-胡萝卜素(可在生物体内转化为维生素A)等。
+            </p>
+            <p style="text-indent: 2em;">无论是化学法还是发酵法，在生产过程中会引入一些有颜色的杂质，一般通过活性炭来进行脱色抛光。如Basf的维生素A合成工艺中，最后一步C15（棕色）与C5醛合成反应后得到粗品为棕色油状物，需要经过乙醇溶解后加入活性炭在55℃左右脱色，过滤分离后冷却结晶得到淡黄色成品。
+            </p>
+                                                           
             
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
-
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
