--- a/medicine3.html
+++ b/medicine3.html
@@ -82,26 +82,35 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
-        </li> 
-        <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
-        <li>
-            <a href="./chemical2.html">甘油脱色</a>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine.html">医药行业</a></div>
         </li>
+        <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine3.html">青霉素，头孢菌素等抗生素类的脱色</a></div>
+        </li>  
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+          <a href="./medicine1.html">维生素类的脱色除杂</a>
+        </li>     
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+          <a href="./medicine2.html">酶制剂的纯化</a>
+        </li>           
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+          <a href="./medicine4.html">造影剂类的脱色</a>
+        </li>         
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+          <a href="./medicine5.html">多肽类的纯化</a>
+        </li>         
+        <li>
+          <a href="./medicine6.html">扑息热痛脱色</a>
+        </li>         
+        <li>
+          <a href="./medicine7.html">活性炭胶囊及片剂</a>
+        </li>         
+        <li>
+          <a href="./medicine8.html">血液灌流</a>
+        </li>         
+        <li>
+          <a href="./medicine9.html">化妆品</a>
+        </li>              
       </ul> 
     </div>  
 
@@ -111,65 +120,21 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 医药行业
           </div>
 
           <div class="conNeiText">  
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">青霉素，头孢菌素等抗生素类的脱色 Antibiotics decoloring</h2> 
+            <div style="text-align:center;">
+              <img src="./image/medicine3-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">青霉素与头孢菌素同属于抗生素，而抗生素在目前的制药工业中仍占有举足轻重的地位，尤其是下游半合成工艺的发展，带动了整体的工业生产规模，其中包括有β-内酰胺类的青霉素与头孢菌素C，也包括大环酯类的红霉素、利福霉素，氨基环醇类的链霉素、庆大霉素，以及林可霉素、四环素、金霉素、万古霉素等，其中青霉素与头孢菌素占有很大市场。
+            </p>
+            <p style="text-indent: 2em;">活性炭在抗生素中主要是脱色，以青霉素为例，青霉素的生产一般经过菌种选择、孢子制备、种子培养、发酵、产品结晶分离等步骤得到成品。其中发酵液的冷冻吸附脱色是青霉素生产的关键环节，一般是在青霉素的第二道醋酸丁酯萃取液中加入活性炭，pH一般控制为2左右，温度控制为5℃左右。活性炭不仅需要脱色，还需要去除热源。因此，活性炭要求是药用级碳，对灰分、热源、金属离子等都有较高要求。
+            </p>
             
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
-
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
