--- a/medicine4.html
+++ b/medicine4.html
@@ -82,26 +82,35 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
-        </li> 
-        <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
-        <li>
-            <a href="./chemical2.html">甘油脱色</a>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine.html">医药行业</a></div>
         </li>
+        <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine4.html">造影剂类的脱色</a></div>
+        </li>  
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+          <a href="./medicine1.html">维生素类的脱色除杂</a>
+        </li>     
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+          <a href="./medicine2.html">酶制剂的纯化</a>
+        </li>    
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+          <a href="./medicine3.html">青霉素，头孢菌素等抗生素类的脱色</a>
+        </li>         
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+          <a href="./medicine5.html">多肽类的纯化</a>
+        </li>         
+        <li>
+          <a href="./medicine6.html">扑息热痛脱色</a>
+        </li>         
+        <li>
+          <a href="./medicine7.html">活性炭胶囊及片剂</a>
+        </li>         
+        <li>
+          <a href="./medicine8.html">血液灌流</a>
+        </li>         
+        <li>
+          <a href="./medicine9.html">化妆品</a>
+        </li>              
       </ul> 
     </div>  
 
@@ -111,65 +120,25 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 医药行业
           </div>
 
           <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">造影剂类的脱色 Contrast media decoloring</h2> 
+            <div style="text-align:center;">
+              <img src="./image/medicine4-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">造影剂是为增强影响观察效果而注入（或服用）到人体组织或器官的化学制品，作为放射学操作中最常使用的药物之一，主要用于血管、体腔的显示。一般在普通放射的情况下无法看到明确症状时，通过使用造影剂，可以增强放射效果，看到明显的病灶，达到诊断的目的。
+            </p>
+            <p style="text-indent: 2em;">放射诊疗中，主要包含有X光、B超、CT、MR这四种，每种使用的造影剂都不同。B超（声学）一般使用以高密度惰性气体（不易溶于水或血液）为主的外膜薄而柔软的2~10um气泡，振动及回波特性好；X光和CT均利用X射线进行扫描，只不过方式手段不一样，主要使用含碘造影剂，目前主要以CT为主；MR造影剂目前最广泛使用为钆（Gd）离子螯合物，常用螯合物如二乙三胺五乙酸（DTPA)、1,4,7,10-四氮杂环十二烷、1,4,7,10-四乙酸(DOTA)和乙二胺四乙酸（EDTA)以及它们的衍生物，目前仅有Gd-DTPA商用，其他均在临床试验中，这些产品均为顺磁性药物，增强核磁效果，安全性非常高，不过MR造影剂的合成简单，核心是载体技术，能针对肿瘤细胞达到好的靶向效果。
+            </p>
+            <p style="text-indent: 2em;">X-CT造影剂均为三碘苯环的衍生物，含有3-乙酰-2,4,6-三碘异酞酸的结构，主要分为离子型造影剂和非离子型造影剂。第一代为离子型造影剂，以钠盐和葡甲胺盐为主，泛影葡胺、异泛影葡胺、异泛影钠等，这种造影剂属于高渗型，对人体的副作用较大；第二代主要为非离子型造影剂，一般为单体或双体的三碘苯环结构，如碘海醇、碘帕醇、碘普胺、碘佛醇、碘美普尔等，渗透性较高；第三代为碘克沙醇、碘弗米醇等，属于等渗透型，对人体的损害相对较小
+            </p>
+            <p style="text-indent: 2em;">X-CT造影剂的纯化过程中，需要经过大孔树脂纯化分离，脱色重结晶等步骤，最后得到白色晶体。一般脱色重结晶采用活性炭进行抛光处理，在这个过程中需要留意活性炭对造影剂的吸附影响。
+            </p>
 
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
