--- a/medicine5.html
+++ b/medicine5.html
@@ -82,26 +82,35 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
-        </li> 
-        <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
-        <li>
-            <a href="./chemical2.html">甘油脱色</a>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine.html">医药行业</a></div>
         </li>
+        <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine5.html">多肽类的纯化</a></div>
+        </li>  
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+          <a href="./medicine1.html">维生素类的脱色除杂</a>
+        </li>     
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+          <a href="./medicine2.html">酶制剂的纯化</a>
+        </li>    
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+          <a href="./medicine3.html">青霉素，头孢菌素等抗生素类的脱色</a>
+        </li>         
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+          <a href="./medicine4.html">造影剂类的脱色</a>
+        </li>                 
+        <li>
+          <a href="./medicine6.html">扑息热痛脱色</a>
+        </li>         
+        <li>
+          <a href="./medicine7.html">活性炭胶囊及片剂</a>
+        </li>         
+        <li>
+          <a href="./medicine8.html">血液灌流</a>
+        </li>         
+        <li>
+          <a href="./medicine9.html">化妆品</a>
+        </li>              
       </ul> 
     </div>  
 
@@ -111,65 +120,29 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 医药行业
           </div>
 
           <div class="conNeiText">  
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">多肽类的纯化 Peptide drugs purification</h2> 
+            <div style="text-align:center;">
+              <img src="./image/medicine5-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">多肽药物是一种可以用于疾病的预防、治疗和诊断的多肽类生物药物，多肽类药物主要包括多肽疫苗、抗肿瘤多肽、抗病毒多肽、多肽导向药物、细胞因子模拟肽、抗菌性活性肽、诊断用多肽以及其他药用小肽等。多肽药物与一般的有机小分子药物相比，具有生物活性强、用药剂量小、毒副作用低和疗效显著等突出特点，然而其半衰期一般较短、不稳定，在体内容易被快速降解。
+            </p>
+            <p style="text-indent: 2em;">与蛋白类大分子药物相比，除了多肽疫苗外，多肽类药物免疫原性相对较小，用药剂量少，单位活性更高，易于合成、改造和优化，产品纯度高，质量可控，能够迅速确定药用价值。   
+            </p>
+            <p style="text-indent: 2em;">多肽药物其制备方法主要有化学多肽合成、分离纯化法和基因工程法等，其中化学多肽合成是多肽药物的主要制备方式。虽然多肽类药物可以通过从生物体内分离纯化获得，但是天然存在的多肽分子含量少，无法完全满足临床应用的需求。
+            </p>
+            <p style="text-indent: 2em;">化学多肽合成方法是通过氨基酸逐步缩合的化学反应来实现，主要有Boc合成法和Fmoc合成法，首先将目的肽第一个氨基酸的羧基以共价键的形式与固相载体相连，再以这一氨基酸的氨基为合成起点，经过脱去氨基保护基并同过量的活化的第二个氨基酸反应，接长肽链。重复（缩合→洗涤→去保护→中和及洗涤→下一轮缩合）操作，达到所要合成的肽链长度，最后将肽链从树脂上裂解下来，经过纯化等处理，即得所要的多肽。一般不同肽链的长度其特征波长吸收峰不一样，一般通过特征波长吸收来判断纯度。
+            </p>
+            <p style="text-indent: 2em;">多肽的纯化主要以色谱层析洗脱为主，配合滤膜和活性炭精制，一般活性炭用量非常少。
+            </p>    
+            <p style="text-indent: 2em;">生物多肽即通过动植物提取蛋白后水解得到氨基酸，再进行脱水缩合，一般在蛋白酶解液这个阶段就会处理掉颜色，即与氨基酸的脱色工艺一致。
+            </p>       
             
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
-
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
