--- a/medicine6.html
+++ b/medicine6.html
@@ -82,26 +82,35 @@
           <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
         </li> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
-        </li> 
-        <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
-        <li>
-            <a href="./chemical2.html">甘油脱色</a>
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine.html">医药行业</a></div>
         </li>
+        <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
+          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./medicine6.html">扑息热痛脱色</a></div>
+        </li>  
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
-        </li>
+          <a href="./medicine1.html">维生素类的脱色除杂</a>
+        </li>     
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
-        </li>
+          <a href="./medicine2.html">酶制剂的纯化</a>
+        </li>    
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
-        </li>
+          <a href="./medicine3.html">青霉素，头孢菌素等抗生素类的脱色</a>
+        </li>         
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
-        </li>
+          <a href="./medicine4.html">造影剂类的脱色</a>
+        </li>         
+        <li>
+          <a href="./medicine5.html">多肽类的纯化</a>
+        </li>               
+        <li>
+          <a href="./medicine7.html">活性炭胶囊及片剂</a>
+        </li>         
+        <li>
+          <a href="./medicine8.html">血液灌流</a>
+        </li>         
+        <li>
+          <a href="./medicine9.html">化妆品</a>
+        </li>              
       </ul> 
     </div>  
 
@@ -111,65 +120,21 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 应用导航 >> 医药行业
           </div>
 
           <div class="conNeiText">  
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">扑息热痛脱色 Parecetamol decoloring</h2> 
+            <div style="text-align:center;">
+              <img src="./image/medicine6-0.jpg" style="width: 80%;">
+            </div>
+            <p style="text-indent: 2em;">扑息热痛（对乙酰氨基酚）是最常用的非抗炎解热镇痛药，镇痛作用较弱，无抗炎抗风湿作用，是乙酰苯胺类药物中最好的品种。特别适合于不能应用羧酸类药物的病人。用于感冒、牙痛等症。
+            </p>
+            <p style="text-indent: 2em;">扑息热痛结构式不复杂，合成比较简单，起始原料为对氨基酚，做一道乙酰化即可，精制脱色一般是水相热过滤加入活性炭脱色，再冷却结晶得到目标产品。
+            </p>
             
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
-
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
