--- a/news1.html
+++ b/news1.html
@@ -70,7 +70,7 @@
 <!--头部-->
 
 <p class="clear"></p> 
-<img src="./image/application.jpg" style="border-bottom:solid 1px #ddd;"/>
+<img src="./image/knowledge.jpg" style="border-bottom:solid 1px #ddd;"/>
 <!--头部--> 
 <div class="wdiv1000"  style="margin-top:8px;">
 
@@ -79,28 +79,22 @@
     <div class="contLeftProds">        
     	<ul> 
         <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./application.html">活性炭在各行业的应用</a></div>
-        </li> 
-        <li style="background-image:url(./image/dd_05.jpg); text-align:right; ">
-          <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./chemical.html">化工行业</a></div>
+            <div style="font-size:14px; color:#fff;  font-weight:bold;"><a href="./knowledge.html">实用知识</a></div>
         </li> 
         <li>
-            <a href="./chemical1.html">润滑油脱色</a>
-        </li>       
-        <li>
-            <a href="./chemical2.html">甘油脱色</a>
+          <a href="./knowledge1.html">活性炭参数的基础知识</a>
         </li>
         <li>
-            <a href="./chemical3.html">柠檬酸脱色</a>
+            <a href="./knowledge2.html">脱色的基础知识</a>
         </li>
         <li>
-            <a href="./chemical4.html" >氨基酸脱色</a>
+            <a href="./knowledge3.html">微管道反应选用颗粒碳</a>
         </li>
         <li>
-          <a href="./chemical5.html" >农化产品的纯化</a>
+            <a href="./knowledge4.html" >活性炭孔特征</a>
         </li>
         <li>
-          <a href="./chemical6.html" >胺液的净化</a>
+          <a href="./application.html" >活性炭在各行业的应用</a>
         </li>
       </ul> 
     </div>  
@@ -111,65 +105,16 @@
 
     	<div class="conNeiRong">
           <div class="conNeiTitle">
-            当前位置:首页 >> 应用导航 >> 化工行业
+            当前位置:首页 >> 公司新闻
           </div>
 
-          <div class="conNeiText">  
-            
-            <strong style="line-height:50px;">活性炭在化工行业的应用 :</strong>
-            <br>
-
-            <ul class="productapp">
-              <li>
-                <a href="./chemical1.html" >
-                  <img src="./image/chemical1.jpg" alt="润滑油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical1.html">润滑油脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical2.html" >
-                  <img src="./image/chemical2.jpg" alt="甘油脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical2.html">甘油脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical3.html" >
-                  <img src="./image/chemical3.jpg" alt="柠檬酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical3.html">柠檬酸脱色</a>
-              </li>
-
-              <li>
-                <a href="./chemical4.html" >
-                  <img src="./image/chemical4.jpg" alt="氨基酸脱色" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical4.html">氨基酸脱色</a>
-              </li> 
-
-              <li>
-                <a href="./chemical5.html" >
-                  <img src="./image/chemical5.jpg" alt="农化产品的纯化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical5.html">农化产品的纯化</a>
-              </li>
-
-              <li>
-                <a href="./chemical6.html" >
-                  <img src="./image/chemical6.jpg" alt="胺液的净化" />
-                </a>
-                <br>
-                <a class="atext" href="./chemical6.html">胺液的净化</a>
-              </li> 
-            </ul>
+          <div class="conNeiText"> 
+            <h2 style="color: rgb(0, 102, 204); line-height:50px; text-align: center;">庆祝山东飞肯新材料科技有限公司企业官网开通</h2> 
+            <p style="text-indent:2em;font-size: 16px;">
+              山东飞肯新材料科技有限公司，是一家由多名活性炭及精细化工领域十年以上资深人士发起创立的企业。基于我们对活性炭生产及应用领域的深刻理解，山东飞肯新材料立志于为客户提供完整的专业定制化解决方案！公司目前已与多家世界著名的活性炭生产企业展开了深入合作，涉及到的活性炭材质有烟煤，无烟煤，褐煤，泥煤，木质，椰壳，沥青，竹子等，从而能够更好地满足制药，食品，化工，催化剂，气体净化，水处理等行业对净化的需求。得力于中国合作伙伴的大力支持，山东飞肯新材料具备了对基碳进行酸洗、水洗、筛分、分装、配碳、改性等二次处理能力，同时拥有活性炭微观结构如孔径孔容、粒径分布等参数的强大数据库，可为客户提供定制化的脱杂筛碳方案。山东飞肯新材料，欢迎您的问询！
+            </p>                                                           
             <p class="clear"></p>
-
+            <br>
           </div>
 
       </div>    
